--- a/Kreative/Kreative/src/main/resources/application.properties
+++ b/Kreative/Kreative/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Kreative
+
+server.port=9090
+
+spring.datasource.url=jdbc:h2:mem:kreative
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=12345678
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
